# omnisearch

./: .gitignore  Cargo.toml  README.md  example.json  package.json
keymaps/: omnisearch.json
lib/: client.js  code-item.js  control-view.js  error-view.js  extension-item.js  extension-view.js  file-item.js  history.js  line-block-item.js  main.js  metrics-view.js  project-item.js  project-selector-view.js  project-view.js  query.js  result-content-view.js  result-file-view.js  result-view.js  search-view.js  search.js  server-process.js
server/: Cargo.toml  curl-example.sh
server/src/: cache2.rs  errors.rs  ext.rs  main.rs  params.rs  result.rs  search.rs  suffix.rs
server/src/cache/: bloom.rs  cache.rs  mod.rs  murmur3.rs
src/: args.rs  errors.rs  ext.rs  lib.rs  main.rs  params.rs  res.rs  result.rs  search.rs  types.rs
styles/: search-view.less
