[package]
name = "omnisearch"
version = "0.1.0"
license = "MIT"
description = "Atom search with livegrep functionality"
authors = [
  "Ivan Sadikov <ivan.sadikov@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/sadikovi/omnisearch"
repository = "https://github.com/sadikovi/omnisearch"
keywords = ["atom", "search", "livegrep"]

[dependencies]
crossbeam-channel = "0.2"
futures = "0.1"
grep = "0.2"
hyper = "0.12"
ignore = "0.4"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
